# ChangeLog for net-im/psimedia
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psimedia/ChangeLog,v 1.11 2009/11/24 01:49:30 jer Exp $

  24 Nov 2009; Jeroen Roovers <jer@gentoo.org> psimedia-1.0.3.ebuild:
  Stable for HPPA (bug #293281).

  23 Nov 2009; Markus Meier <maekke@gentoo.org> psimedia-1.0.3.ebuild:
  x86 stable, bug #293281

  21 Nov 2009; nixnut <nixnut@gentoo.org> psimedia-1.0.3.ebuild:
  ppc stable #293281

  16 Nov 2009; Dawid Węgliński <cla@gentoo.org> psimedia-1.0.3.ebuild:
  Stable on amd64 (bug #293281)

  24 Sep 2009; Mounir Lamouri <volkmar@gentoo.org> psimedia-1.0.3.ebuild:
  Keywording for ppc. Bug 279676

  02 Aug 2009; Jeroen Roovers <jer@gentoo.org> psimedia-1.0.3.ebuild:
  Marked ~hppa (bug #279676).

  29 Jul 2009; Peter Volkov <pva@gentoo.org> metadata.xml:
  Add required herd tag, bug #279206, thank Thilo Bangert for report.

*psimedia-1.0.3 (25 Jun 2009)

  25 Jun 2009; Peter Volkov <pva@gentoo.org> -psimedia-1.0.2.ebuild,
  +psimedia-1.0.3.ebuild:
  Version bump, thank Rion for report.

  02 Jun 2009; Peter Volkov <pva@gentoo.org> psimedia-1.0.2.ebuild:
  Update glib dependency, thank Leonid Evdokimov and Dennis Schridde for
  report in bug #271091.

  01 Jun 2009; Peter Volkov <pva@gentoo.org> psimedia-1.0.2.ebuild:
  Added blocker with older versions of psi, since psimedia works only with
  >=psi-0.13_rc1.

*psimedia-1.0.2 (29 May 2009)

  29 May 2009; Peter Volkov <pva@gentoo.org> +psimedia-1.0.2.ebuild,
  +metadata.xml:
  Initial import. Thank Vadim Efimov for ebuild.
