@@ -1,6 +1,9 @@
 # ChangeLog for net-im/psimedia
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psimedia/ChangeLog,v 1.11 2009/11/24 01:49:30 jer Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/psimedia/ChangeLog,v 1.12 2010/01/06 20:51:14 ranger Exp $
+
+  06 Jan 2010; Brent Baude <ranger@gentoo.org> psimedia-1.0.3.ebuild:
+  Marking psimedia-1.0.3 ~ppc64 for bug 279676
 
   24 Nov 2009; Jeroen Roovers <jer@gentoo.org> psimedia-1.0.3.ebuild:
   Stable for HPPA (bug #293281).
